<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onlineOptionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/buttonLayoutMargin">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/textStartGameOnline2"
        android:textSize="@dimen/textOnlineScreen"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/marginTExitButton"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonCreateMatch"
        android:text="@string/newRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTopTurn"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonJoinMatch"
        android:text="@string/joinRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white" />

</LinearLayout>
