<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/newgame_board"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/turnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintopTurn"
        android:text="@string/textTurnWhite"
        android:textSize="@dimen/textViewTurn"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bàn cờ 8x8 -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="8"
        android:id="@+id/gridLayoutBoard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/R00"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values"
            android:background="@color/colorLightBoard" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R01"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R02"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R03"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R04"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R05"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView

            android:background="@color/colorLightBoard"
            android:id="@+id/R06"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R07"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView

            android:background="@color/colorDarkBoard"
            android:id="@+id/R10"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R11"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R12"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R13"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R14"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R15"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R16"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R17"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R20"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R21"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R22"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R23"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R24"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R25"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R26"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R27"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R30"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R31"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R32"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R33"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R34"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R35"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R36"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R37"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R40"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R41"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R42"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R43"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R44"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R45"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R46"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R47"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R50"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R51"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R52"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R53"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R54"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R55"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R56"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R57"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R60"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R61"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R62"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R63"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R64"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R65"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R66"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R67"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R70"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R71"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R72"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R73"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R74"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R75"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorDarkBoard"
            android:id="@+id/R76"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />

        <ImageView
            android:background="@color/colorLightBoard"
            android:id="@+id/R77"
            android:layout_width="@dimen/square_values"
            android:layout_height="@dimen/square_values" />
    </GridLayout>
    <LinearLayout
        android:id="@+id/endGameOverlay"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#AAFF0000"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/endGameText"
            android:text="@string/white_win"
            android:textSize="@dimen/textEndGame"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/marginBTextEndGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/restartButton"
            android:text="@string/textPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
